tests/bc_interpreter/err_duplicate_param_name.expected
<string>:1:10: error: symbol a already defined in this scope
fun f(a, a) {
         ^