tests/bc_interpreter/err_duplicate_param_name.nx
fun f(a, a) {
}

fun main() {
    f(42, 43);
}